# calculator

./: .gitignore  .gitmodules  CMakeLists.txt
cmake_common/: create_test.cmake  project.yml
src/: CMakeLists.txt
src/adder/: CMakeLists.txt
src/adder/tests/: add_test.c
src/calculator/: CMakeLists.txt
src/calculator/include/: calculator.h
src/calculator/src/: calculator.c  calculator_app.c
src/calculator/tests/: calculator_test.c
src/divider/: CMakeLists.txt
src/divider/include/: divide.h
src/multiplier/: CMakeLists.txt
src/multiplier/src/: multiply.c
src/substractor/include/: substract.h
src/substractor/src/: substract.c
targets/: CMakeLists.txt
targets/adder/: CMakeLists.txt
targets/divider/src/: divide.c
targets/multiplier/include/: multiply.h
targets/substractor/: CMakeLists.txt
